adjust cursor info pos; avoid blurry border; adjust ticks sampling

--- a/src/components/ImageView/Colorbar/ColorbarComponent.scss
+++ b/src/components/ImageView/Colorbar/ColorbarComponent.scss
@@ -4,9 +4,14 @@
 }
 
 .colorbar-info {
-    width: 170px;
+    width: 300px;
     height: 12px;
     position: absolute;
     bottom: 3px;
     right: 5px;
+
+    .profiler-info {
+        left: auto;
+        right: 0px;
+    }
 }
